Lista de vehiculos al crear una reserva
